fix(dojo): update staff names and fix card alignment bug

--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -207,6 +207,7 @@
 }
 
 .instructor-img {
+  display: block;
   width: 100%;
   height: 250px;
   object-fit: cover;
